Scene "bread crumbs" in the middle of the panels when opening old files #81161

Closed
opened 2020-09-25 12:21:03 +02:00 by Dalai Felinto · 10 comments

Blender Version
Broken: master (2.91 alpha) 1a64f97b9e
Worked: 2.90

Short description of error
Opening a 2.8 file in master (2.91) shows the "Scene" bread crumb in the middle of the panels.

Exact steps for others to reproduce the error
Open:

ui-layout.blend

image.png

This file is the layout from the archiviz eevee sample flie .

By moving any panel up/down the issue goes away.

**Blender Version** Broken: master (2.91 alpha) 1a64f97b9e12 Worked: 2.90 **Short description of error** Opening a 2.8 file in master (2.91) shows the "Scene" bread crumb in the middle of the panels. **Exact steps for others to reproduce the error** Open: [ui-layout.blend](https://archive.blender.org/developer/F8919401/ui-layout.blend) ![image.png](https://archive.blender.org/developer/F8919405/image.png) This file is the layout from the [archiviz eevee sample flie ](https://download.blender.org/demo/eevee/archiviz/archiviz.blend). By moving any panel up/down the issue goes away.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

#81227 was marked as duplicate of this issue

#81227 was marked as duplicate of this issue
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Owner

@HooglyBoogly most likely this is part of the search patch.

@HooglyBoogly most likely this is part of the search patch.
Hans Goudey self-assigned this 2020-09-25 15:49:16 +02:00
Member

Interesting, not sure why this is happening. I'll take a look.

Interesting, not sure why this is happening. I'll take a look.
Member

Very interesting! I just downloaded a fresh copy of 2.80, saved a file and opened it in master. It worked fine.
I also tried with the default startup files of 2.79 and 2.81. They worked fine.

What did cause the problem is saving the default startup file of 2.79, which did have this panel, then opening the file in 2.80 and rearranging some panels, then opening in master.
Because the Panel struct for currently unused panels is saved in files, the panel still existed in 2.80 even though it wasn't visible. So while rearranging panels it got moved to the bottom.
Then I used the same panel ID in 2.91, so the bad sortorder was read and the panel was placed in the middle.

In your case, I expect the file was created in an early version of 2.80 that still had the BUTTONS_PT_context panel.

An easy fix is to use a new ID name for the new version of this panel in 2.91. That won't solve this same situation in the future, but this is probably a very uncommon problem anyway.

Very interesting! I just downloaded a fresh copy of 2.80, saved a file and opened it in master. It worked fine. I also tried with the default startup files of 2.79 and 2.81. They worked fine. What *did* cause the problem is saving the default startup file of 2.79, which did have this panel, then opening the file in 2.80 and rearranging some panels, then opening in master. Because the `Panel` struct for currently unused panels is saved in files, the panel still existed in 2.80 even though it wasn't visible. So while rearranging panels it got moved to the bottom. Then I used the same panel ID in 2.91, so the bad sortorder was read and the panel was placed in the middle. In your case, I expect the file was created in an early version of 2.80 that still had the `BUTTONS_PT_context` panel. An easy fix is to use a new ID name for the new version of this panel in 2.91. That won't solve this same situation in the future, but this is probably a very uncommon problem anyway.

This issue was referenced by d951239e1d

This issue was referenced by d951239e1d9a903219a1d40d3704ea5696c452e5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @AFWS

Added subscriber: @AFWS
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81161
No description provided.